# polymock

./: .env-example  .gitignore  .gitlab-ci.yml  README-en.md  README.md  docker-compose.yml
backend/: Dockerfile  entrypoint.sh  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0ef98cea7a30_initial_tables.py  a1b2c3d4e5f6_add_is_admin_to_user.py  b2c3d4e5f6g7_add_profile_fields.py
backend/src/: main.py
backend/src/api/: deps.py
backend/src/api/v1/: admin.py  auth.py  markets.py
backend/src/core/: config.py  security.py
backend/src/db/: session.py
backend/src/models/: __init__.py  market.py  position.py  transaction.py  user.py
backend/src/schemas/: admin.py  ai.py  auth.py  market.py
backend/src/services/: ai_service.py  market_service.py
backend/tests/: conftest.py
backend/tests/api/v1/: test_markets.py
frontend/: Dockerfile  components.json  index.html  nginx.conf  package-lock.json  package.json  pnpm-lock.yaml
frontend/src/: App.tsx  index.css
frontend/src/components/: BuyDialog.tsx  DashboardLayout.tsx  MarketCard.tsx  MarketsGrid.tsx  ProtectedRoute.tsx
frontend/src/lib/: api.ts
frontend/src/pages/: AdminPage.tsx  AuthPage.tsx  ProfilePage.tsx
frontend/src/stores/: authStore.ts
